# FormatStickPro

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  exfat_bridge.cpp  ext_bridge.cpp  f2fs_bridge.cpp  native-lib.cpp  udf_bridge.cpp  usb_scsi.cpp  usb_scsi.h  version.h  xfs_bridge.cpp
app/src/main/cpp/exfat_src/: COPYING  exfat.h  exfat_config.h
app/src/main/cpp/ext_src/: create_inode.h  default_profile.c  ext2_config.h  fpopen.c  mk_hugefiles.c  mke2fs.c  mke2fs.h  util.c  util.h
app/src/main/cpp/ext_src/blkid/: blkid.h  blkid_types.h  cache.c  dev.c  devname.c  devno.c  getsize.c  llseek.c  probe.c  read.c  resolve.c  save.c  tag.c  tst_types.c  version.c
app/src/main/cpp/ext_src/e2p/: crypto_mode.c  encoding.c  errcode.c  feature.c  fgetflags.c  fgetproject.c  fgetversion.c  fsetflags.c  fsetproject.c  fsetversion.c  getflags.c  getversion.c  hashstr.c  iod.c  ljs.c  ls.c  mntopts.c  ostype.c  parse_num.c  pe.c  percent.c  pf.c  ps.c  setflags.c  setversion.c  uuid.c
app/src/main/cpp/ext_src/et/: com_err.c  com_err.h  com_right.c  error_message.c  et_name.c  init_et.c  vfprintf.c
app/src/main/cpp/ext_src/ext2fs/: alloc.c  alloc_sb.c  alloc_stats.c  alloc_tables.c  atexit.c  badblocks.c  bb_compat.c  bb_inode.c  bitmaps.c  bitops.c  blkmap64_ba.c  blkmap64_rb.c  blknum.c  block.c  bmap.c  bmove.c  brel_ma.c  check_desc.c  closefs.c  crc16.c  crc32c.c  csum.c  dblist.c  dblist_dir.c  digest_encode.c  dir_iterate.c  dirblock.c  dirhash.c  dosio.c  dupfs.c  expanddir.c  ext2_err.c  ext2_err.h  ext2_types.h  ext_attr.c  extent.c  fallocate.c  fileio.c  finddev.c  flushb.c  (+66 more)
app/src/main/cpp/ext_src/ss/: data.c  error.c  execute_cmd.c  get_readline.c  help.c  invocation.c  list_rqs.c  listen.c  pager.c  parse.c  prompt.c  request_tbl.c  requests.c  test_ss.c
app/src/main/cpp/ext_src/support/: argv_parse.c  cstring.c  devname.c  dict.c  mkquota.c  parse_qtype.c  plausible.c  print_fs_flags.c  prof_err.c  prof_err.h  profile.c  profile_helpers.c  quotaio.c  quotaio_tree.c  quotaio_v2.c
app/src/main/cpp/ext_src/uuid/: clear.c  compare.c  copy.c  gen_uuid.c  gen_uuid_nt.c  isnull.c  pack.c  parse.c  tst_uuid.c  unpack.c  unparse.c  uuid.h  uuid_time.c  uuid_types.h
app/src/main/cpp/f2fs_src/include/: config.h  f2fs_fs.h
app/src/main/cpp/f2fs_src/lib/: libf2fs.c  libf2fs_io.c
app/src/main/cpp/f2fs_src/mkfs/: f2fs_format.c  f2fs_format_main.c
app/src/main/cpp/libusb/: COPYING  libusb_config.h  libusbi.h
app/src/main/cpp/libusb/os/: darwin_usb.c  events_windows.c  netbsd_usb.c  openbsd_usb.c  sunos_usb.c  windows_common.c  windows_usbdk.c  windows_winusb.c
app/src/main/cpp/ntfs-3g-lib/: ntfs_config.h
app/src/main/cpp/ntfs-3g-lib/libfuse-lite/: fuse.c  fuse_kern_chan.c  fuse_loop.c  fuse_lowlevel.c  fuse_misc.h  fuse_opt.c  fuse_session.c  fuse_signals.c  helper.c  mount.c  mount_util.c
app/src/main/cpp/ntfs-3g-lib/libntfs-3g/: acls.c  attrib.c  attrlist.c  bitmap.c  bootsect.c  cache.c  collate.c  compat.c  compress.c  debug.c  device.c  dir.c  ea.c  efs.c  index.c  inode.c  ioctl.c  lcnalloc.c  logfile.c  logging.c  mft.c  misc.c  mst.c  object_id.c  realpath.c  reparse.c  runlist.c  security.c  unistr.c  unix_io.c  volume.c  win32_io.c  xattrs.c
app/src/main/cpp/ntfs-3g-lib/ntfsprogs/: cluster.c  cluster.h  mkntfs.c  ntfscat.c  ntfscat.h  ntfsck.c  ntfsclone.c  ntfscluster.c  ntfscluster.h  ntfscmp.c  ntfscp.c  ntfsdecrypt.c  ntfsdump_logfile.c  ntfsfallocate.c  ntfsfix.c  ntfsinfo.c  ntfslabel.c  ntfsls.c  ntfsmftalloc.c  ntfsmove.c  ntfsmove.h  ntfsrecover.c  ntfsresize.c  ntfssecaudit.c  ntfstruncate.c  ntfsundelete.c  ntfsundelete.h  ntfsusermap.c  ntfswipe.c  ntfswipe.h  playlog.c  sd.c  sd.h  utils.c  utils.h
app/src/main/cpp/ntfs-3g-lib/src/: lowntfs-3g.c  ntfs-3g.c  ntfs-3g.probe.c  ntfs-3g_common.c
app/src/main/cpp/udf_src/: ChangeLog  Makefile.in  configure
app/src/main/cpp/udf_src/cdrwtool/: Makefile.in
app/src/main/cpp/udf_src/doc/: Makefile.in
app/src/main/cpp/udf_src/include/: config.h  config.in
app/src/main/cpp/udf_src/libudffs/: Makefile.in  misc.c
app/src/main/cpp/udf_src/mkudffs/: Makefile.in  defaults.c  main.c  mkudffs.c  options.c
app/src/main/cpp/udf_src/pktsetup/: Makefile.in
app/src/main/cpp/udf_src/udffsck/: Makefile.in
app/src/main/cpp/udf_src/udfinfo/: Makefile.in
app/src/main/cpp/udf_src/udflabel/: Makefile.in
app/src/main/cpp/udf_src/wrudf/: Makefile.in
app/src/main/cpp/xfs_src/: .gitignore  COPYING  Makefile  VERSION  configure.ac  release.sh
app/src/main/cpp/xfs_src/db/: bmap_inflate.c
app/src/main/cpp/xfs_src/debian/: changelog  control  postinst  prerm  rules
app/src/main/cpp/xfs_src/doc/: CHANGES  README-env-vars.txt
app/src/main/cpp/xfs_src/fsr/: xfs_fsr.c
app/src/main/cpp/xfs_src/healer/: Makefile  fsrepair.c  system-xfs_healer.slice  weakhandle.c  xfs_healer.c  xfs_healer.h  xfs_healer@.service.in  xfs_healer_start.c  xfs_healer_start.service.in
app/src/main/cpp/xfs_src/include/: builddefs.in  config.h  ini.c  ini.h  kmem.h  libxfs.h  linux.h  urcu.h  xfs_android_stubs.h  xfs_fs_compat.h  xfs_trace.h
app/src/main/cpp/xfs_src/io/: Makefile  healthmon.c  init.c  io.h  listmount.c  verify_media.c
app/src/main/cpp/xfs_src/libfrog/: Makefile  bitmap.c  convert.c  convert.h  crc32cselftest.h  flagmap.c  flagmap.h  fsproperties.h  getparents.c  getparents.h  healthevent.c  healthevent.h  linux.c  statmount.c  statmount.h  systemd.c  systemd.h  util.c  util.h
app/src/main/cpp/xfs_src/libxfs/: Makefile  buf_mem.c  buf_mem.h  cache.c  defer_item.c  init.c  inode.c  iunlink.c  kmem.c  libxfs_api_defs.h  logitem.c  rdwr.c  topology.c  trans.c  util.c  xfblob.c  xfile.c  xfs_ag.c  xfs_ag_resv.c  xfs_alloc.c  xfs_alloc_btree.c  xfs_attr.c  xfs_attr_leaf.c  xfs_attr_remote.c  xfs_bmap.c  xfs_bmap_btree.c  xfs_btree.c  xfs_btree_mem.c  xfs_da_btree.c  xfs_defer.c  xfs_dir2.c  xfs_dir2_block.c  xfs_dir2_data.c  xfs_dir2_leaf.c  xfs_dir2_node.c  xfs_dquot_buf.c  xfs_exchmaps.c  xfs_group.c  (+22 more)
scsi-driver/src/main/cpp/: CMakeLists.txt  scsi_jni.cpp
(+99 files in other folders)
